objects/amc__Dependency__c.object
<CustomObject>
    <fields>
        <fullName>amc__Child_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Action that is the Child in the dependency relationship</inlineHelpText>
        <label>Child Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Dependencies (Child Action)</relationshipLabel>
        <relationshipName>Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Lag__c</fullName>
        <inlineHelpText>Days that must pass before Child Action can begin.  Applicable to all Relationship Types.</inlineHelpText>
        <label>Lag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Parent_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Action that is the Parent in the dependency relationship</inlineHelpText>
        <label>Parent Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Dependencies</relationshipLabel>
        <relationshipName>Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Parent_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Milestone that is the Parent in the dependency relationship</inlineHelpText>
        <label>Parent Milestone</label>
        <referenceTo>amc__Milestone__c</referenceTo>
        <relationshipLabel>Dependencies</relationshipLabel>
        <relationshipName>Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Relationship_Type__c</fullName>
        <inlineHelpText>Identifies the type of relationship between the Parent and Child</inlineHelpText>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finish to Start</fullName>
                </value>
                <value>
                    <fullName>Start to Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dependency</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEP:{00000000}</displayFormat>
        <label>Dependency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Ensure_only_one_parent_is_entered</fullName>
        <active>true</active>
        <description>Ensure the Parent Milestone and Parent Action are not both populated</description>
        <errorConditionFormula>AND(NOT(ISBLANK( amc__Parent_Milestone__c )) , NOT(ISBLANK( amc__Parent_Action__c )))</errorConditionFormula>
        <errorMessage>You can only specify a Parent Milestone or Parent Action, not both.</errorMessage>
    </validationRules>
</CustomObject>